fix for body width on mobile

--- a/assets/src/css/index.scss
+++ b/assets/src/css/index.scss
@@ -101,6 +101,10 @@ main {
 		> header {
 			font-size: 0.8em;
 		}
+
+		@include tablet {
+			width: 100%;
+		}
 	}
 
 	@import 'page-content';
